# rustcn

./: .env  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  Cargo.toml  PRD.md  README.md  ROADMAP.md  claude setup.md
.github/workflows/: ci.yml
bindings/: package.json  tsconfig.json
bindings/src/: detection.ts  index.ts  threshold.ts
cli/: Cargo.toml
cli/src/: main.rs
components/accordion/: Accordion.tsx  index.ts
components/alert/: Alert.tsx  index.ts
components/alert-dialog/: AlertDialog.tsx  index.ts
components/avatar/: Avatar.tsx  index.ts
components/badge/: Badge.tsx
components/breadcrumb/: Breadcrumb.tsx  index.ts
components/button/: Button.tsx
components/calendar/: Calendar.tsx  date-engine.ts  index.ts  useCalendar.ts
components/card/: Card.tsx
components/checkbox/: Checkbox.tsx
components/collapsible/: Collapsible.tsx  index.ts
components/combobox/: Combobox.tsx  combobox-search-engine.ts  useCombobox.ts
components/command/: RustCommand.tsx  index.ts
components/dashboard/: KpiGrid.tsx  StatCard.tsx  index.ts
components/drawer/: Drawer.tsx  index.ts
components/form/: RustForm.tsx  RustFormStep.tsx  RustFormSteps.tsx  index.ts  useRustForm.ts
components/hover-card/: HoverCard.tsx  index.ts
components/input/: RustInput.tsx  index.ts
components/kbd/: Kbd.tsx
components/label/: Label.tsx  index.ts
components/markdown/: RustMarkdown.tsx  index.ts
components/modal/: RustModal.tsx  index.ts
components/pagination/: Pagination.tsx  index.ts
components/popover/: Popover.tsx  index.ts
components/progress/: Progress.tsx
components/radio-group/: RadioGroup.tsx  index.ts
components/scroll-area/: ScrollArea.tsx
components/select/: EnhancedSelect.tsx  Select.tsx  index.ts  search-engine.ts  useEnhancedSelect.ts
components/separator/: Separator.tsx  index.ts
components/shared/: cn.ts  index.ts
components/sheet/: Sheet.tsx  index.ts
components/skeleton/: Skeleton.tsx
components/slider/: Slider.tsx
components/spinner/: Spinner.tsx
components/switch/: Switch.tsx
components/table/: RustTable.tsx  index.ts  useRustTable.ts
components/tabs/: Tabs.tsx  index.ts
components/textarea/: Textarea.tsx
components/toggle/: Toggle.tsx
components/toggle-group/: ToggleGroup.tsx  index.ts
docs/: architecture-recipes.md  patterns.md  when-to-use.md
engine-core/: Cargo.toml
engine-core/src/: config.rs  error.rs  lib.rs  memory.rs  performance.rs  threshold.rs
engines/form-validator/: Cargo.toml
engines/form-validator/src/: lib.rs  rules.rs  schema.rs  types.rs  validator.rs
registry/: index.ts  registry.json
tests/: Cargo.toml  lib.rs
tests/parity/: README.md  mod.rs
(+43 files in other folders)
