[workspace]
members = [
    "engine-core",
    "engines/form-validator",
    "engines/data-table",
    "cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
