[package]
name = "rustcn-engine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for rustcn engine plugins with WASM support"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
