[package]
name = "rustcn-integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rustcn-engine-core = { path = "../engine-core" }
rustcn-engine-form-validator = { path = "../engines/form-validator" }
rustcn-engine-data-table = { path = "../engines/data-table" }
rustcn-engine-markdown = { path = "../engines/markdown" }
serde = { workspace = true }
serde_json = { workspace = true }
