[package]
name = "rustcn-engine-form-validator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Production-grade form validation engine with WASM support"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustcn-engine-core = { path = "../../engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
