[package]
name = "rustcn-engine-form-validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustcn-engine-core = { path = "../../engine-core" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-time = "1.1"

[dev-dependencies]

[lints]
workspace = true
